[gd_scene load_steps=10 format=3 uid="uid://cbqa64dyues83"]

[ext_resource type="Script" uid="uid://je7qonmalrn8" path="res://Player/hud.gd" id="1_ns4kc"]
[ext_resource type="FontFile" uid="uid://b0fgmd5g6ohsg" path="res://Assets/misc/Perfect DOS VGA 437.ttf" id="2_sndvk"]
[ext_resource type="Texture2D" uid="uid://bsion2l5e28s6" path="res://Assets/misc/dither_it_Nimetön malli (1).png" id="3_m6twi"]
[ext_resource type="Shader" uid="uid://behuo5mfy7ew0" path="res://misc/time_hud.gdshader" id="4_1jgaw"]
[ext_resource type="Texture2D" uid="uid://i7lclapirxdn" path="res://Assets/misc/Nimetön malli (6).png" id="4_epe4c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sndvk"]
bg_color = Color(0.847059, 0.309804, 0.309804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m6twi"]
bg_color = Color(0.658824, 0.776471, 0.486275, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_epe4c"]
texture = ExtResource("3_m6twi")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_72dvq"]
shader = ExtResource("4_1jgaw")
shader_parameter/rotation_deg = 0.0

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ns4kc")

[node name="TreeContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 10.0
offset_right = 80.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="TreeLabel" type="Label" parent="TreeContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_sndvk")
text = "Tree Of Life"
horizontal_alignment = 1

[node name="TreeHealth" type="ProgressBar" parent="TreeContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_sndvk")
theme_override_styles/background = SubResource("StyleBoxFlat_sndvk")
theme_override_styles/fill = SubResource("StyleBoxFlat_m6twi")
value = 50.0

[node name="PlayerHealth" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -50.0
offset_right = 165.0
offset_bottom = -30.0
grow_vertical = 0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_sndvk")
theme_override_styles/background = SubResource("StyleBoxFlat_sndvk")
theme_override_styles/fill = SubResource("StyleBoxFlat_m6twi")
value = 90.0
allow_greater = true
show_percentage = false

[node name="Ammo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -68.0
offset_right = 164.0
offset_bottom = -52.0
grow_vertical = 0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_sndvk")
text = "0 / 0"
horizontal_alignment = 1

[node name="Crosshair" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.25
offset_top = -1.25
offset_right = 1.25
offset_bottom = 1.25
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Clock" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 10.0
offset_right = -50.0
offset_bottom = 50.0
grow_horizontal = 0
scale = Vector2(2, 2)

[node name="Circle" type="Panel" parent="Clock"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_epe4c")

[node name="pointer" type="TextureRect" parent="Clock"]
material = SubResource("ShaderMaterial_72dvq")
layout_mode = 2
texture = ExtResource("4_epe4c")
expand_mode = 1

[node name="Control" type="Control" parent="Clock"]
layout_mode = 2

[node name="DayLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -87.5
offset_right = 71.0
offset_bottom = -44.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_sndvk")
theme_override_font_sizes/font_size = 42
text = "DAY 1"
